committing  authentication services
