# userservices/routes/user/user.go
@@ -9,5 +9,8 @@ func User(router *gin.RouterGroup) {
 	users := router.Group("/users") 
 		{
 			users.POST("/", user.CreateUserEndpoint)
+			users.PUT("/", user.UpdateUserEndpoint)
+			users.GET("/", user.GetUsersEndpoint)
+			users.GET("/:id", user.GetUserById)
 		}
 }
